recursion.lessons.recursion.koch.PentaKoch.scala.error
PentaKoch:6: error: not found: value pantaKoch
	pantaKoch(levels - 1, length*0.4)
        ^PentaKoch:8: error: not found: value pantaKoch
	pantaKoch(levels - 1, length*0.4)
        ^PentaKoch:10: error: not found: value pantaKoch
	pantaKoch(levels - 1, length*0.4)
        ^PentaKoch:12: error: not found: value pantaKoch
	pantaKoch(levels - 1, length*0.4)
        ^PentaKoch:14: error: not found: value pantaKoch
	pantaKoch(levels - 1, length*0.4)
        ^PentaKoch:16: error: not found: value pantaKoch
	pantaKoch(levels - 1, length*0.4)
        ^