recursion.lessons.recursion.koch.PentaKoch.scala.code
def pentaKoch(levels:Int, length:Double) {
		if(levels == 0) {
		avance(length)
		return
	}
	pantaKoch(levels - 1, length*0.4)
	gauche(108)
	pantaKoch(levels - 1, length*0.4)
	droite(72)
	pantaKoch(levels - 1, length*0.4)
	droite(72)
	pantaKoch(levels - 1, length*0.4)
	gauche(72)
	pantaKoch(levels - 1, length*0.4)
	gauche(108)
	pantaKoch(levels - 1, length*0.4)
}
